# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.407 2005/11/30 21:34:03 wolf31o2 Exp $

  30 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-combine.sh, targets/netboot/netboot-controller.sh,
  targets/stage1/stage1-chroot.sh, targets/stage4/stage4-controller.sh,
  targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  targets/support/create-iso.sh, targets/support/filesystem-functions.sh,
  targets/support/functions.sh, targets/support/kill-chroot-pids.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh,
  targets/support/rc-update.sh:
  Changed multiple spaces to tabs to satisfy my OCD.

  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  Bumped genkernel detection to require 3.3.0 or higher

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/netboot/netboot-controller.sh:
  Changed to clst_use from clst_embedded_use and clst_netboot_use and
  clst_grp_use. This is catalyst-2.0_rc1.

  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
  targets/netboot/netboot-controller.sh:
  change to clst_use from clst_netboot_use

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage4/stage4-chroot.sh:
  Changed to clst_use from clst_stage4_use and clst_livecd_use.

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage4/stage4-chroot.sh:
  Fixed USE invocations in stage4 target.

  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Force use=livecd for livecd-stage1

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst: