@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.14 2005/11/22 19:30:10 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.15 2005/11/30 21:37:58 rocket Exp $
 
 # Simple desriptions of catalyst settings. Please refer to the online
 # documentation for more information.
@@ -12,14 +12,18 @@ distdir="/usr/portage/distfiles"
 # options set different build-time options for catalyst. Some examples are:
 # ccache = enables build time ccache support (highly recommended)
 # distcc = enable distcc support for building. You have to set distcc_hosts in
-#	your spec file.
+#	   your spec file.
 # pkgcache = keeps a tbz2 of every built package (useful if your build stops
-#	prematurely)
+#	     prematurely)
 # kerncache = keeps a tbz2 of your built kernel and modules (useful if your
-#	build stops in livecd-stage2)
+#	      build stops in livecd-stage2)
 # seedcache = use the build output of a previous target if it exists to speed up
-# the copy
+#	      the copy
 # snapcache = cache the snapshot so that it can be bind-mounted into the chroot.
+# autoresume = Attempt to resume a failed build, clear the autoresume flags with 
+#	       the -a option to the catalyst cmdline.  -p will clear the 
+#	       autoresume flags as well as your pkgcache and kerncache.
+#	       ( This option is not fully tested, bug reports welcome ) 
 options="pkgcache kerncache seedcache snapcache"
 
 # sharedir specifies where all of the catalyst runtime executables are. Most
